Refatoração API Rest
Refatorando API Rest apenas para melhorar o código
