# APIRest/routes/orderRoutes.js
@@ -5,8 +5,7 @@ const orderController = require('./../controllers/orderController');
 const router = express.Router();
 
 router
-    .route('/api/pedido')
-    .get(orderController.getAll)
+    .route('/api/pedido')    
     .post(orderController.createOne);    
 
 router
@@ -14,5 +13,9 @@ router
     .get(orderController.getOne)
     .patch(orderController.updateOne)
     .delete(orderController.deleteOne);
+
+router
+     .route('/api/pedido/allByUser/:userId')
+     .get(orderController.getAllByUser);    
   
 module.exports = router;   
